--- a/src/app/courses/create-course/create-course.component.html
+++ b/src/app/courses/create-course/create-course.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="form-group">
     <label for="add-title">Title</label>
-    <input type="text" class="form-control" id="add-title" placeholder="Course title" [(ngModel)]="course.name">  
+    <input type="text" class="form-control" id="add-title" placeholder="Course title">  
   </div>
   <div class="form-group">
     <label for="add-description">Description</label>
-    <textarea class="form-control" id="add-description" rows="5" placeholder="Course description" [(ngModel)]="course.description"></textarea>
+    <textarea class="form-control" id="add-description" rows="5" placeholder="Course description"></textarea>
   </div>
   <div class="form-group">
     <app-date-input></app-date-input>
