Fixed date-input and duration input

--- a/src/app/courses/create-course/create-course.component.html
+++ b/src/app/courses/create-course/create-course.component.html
@@ -3,9 +3,9 @@
     <div class="form-group">
       <input type="hidden" formControlName="id">
       <label for="add-name">Name
-<!--         <span class="text-danger" *ngIf="f.name.touched && f.name.errors">
-          <span *ngIf="f.name.errors.required">required</span>
-        </span> -->
+        <span class="text-danger" *ngIf="f.name.touched && f.name.errors">
+          <span *ngIf="f.name.errors.required">Required.</span>
+        </span>
       </label>
       <input type="text"
         id="add-name" 
@@ -15,9 +15,9 @@
     </div>
     <div class="form-group">
       <label for="add-description">Description
-<!--         <span class="text-danger" *ngIf="f.description.touched && f.description.errors">
-          <span *ngIf="f.description.errors.required">required</span>
-        </span> -->
+        <span class="text-danger" *ngIf="f.description.touched && f.description.errors">
+          <span *ngIf="f.description.errors.required">Required.</span>
+        </span>
       </label>
       <textarea
         id="add-description"
@@ -30,9 +30,10 @@
     <div class="form-group">
       <div class="form-group">
           <label for="add-date">Date
-<!--             <span class="text-danger" *ngIf="f.date.touched && f.date.errors">
-              <span *ngIf="f.name.errors.required">required</span>
-            </span> -->
+            <span class="text-danger" *ngIf="f.date.errors">
+              <span *ngIf="f.date.errors.required">Required.</span>
+              <span *ngIf="f.date.errors.pattern">Wrong date format. Use dd/MM/yyyy.</span>
+            </span>
           </label>
           <app-date-input 
             id="add-date"
@@ -41,9 +42,10 @@
         </div>
         <div class="form-group">
             <label for="add-length">Duration
-<!--               <span class="text-danger" *ngIf="f.length.touched && f.length.errors">
-                <span *ngIf="f.name.errors.required">required</span>
-              </span> -->
+              <span class="text-danger" *ngIf="f.length.errors">
+                <span *ngIf="f.length.errors.required">Required.</span>
+                <span *ngIf="f.length.errors.pattern">Wrong number format.</span>
+              </span>
             </label>
             <app-duration-input
               id="add-length" 
