--- a/src/app/courses/create-course/create-course.component.html
+++ b/src/app/courses/create-course/create-course.component.html
@@ -53,7 +53,11 @@
           ></app-duration-input> 
         </div>
         <div class="form-group">
-          <label for="add-authors">Author(s)</label>
+          <label for="add-authors">Author(s)
+            <span class="text-danger" *ngIf="f.authors.errors">
+              <span *ngIf="f.authors.errors.required">Required.</span>
+            </span>
+          </label>
           <app-author-input
             id="add-authors" 
             formControlName="authors"
