Fixed validator for author component

--- a/src/app/courses/author-input/author-input.component.html
+++ b/src/app/courses/author-input/author-input.component.html
@@ -6,7 +6,7 @@
     (click)="removeValue(value)"
   >{{ value.name }} &#10005;</button>
   <div class="d-inline-block m-1 align-middle" style="max-width: 14em">
-    <input class="pl-1 pr-1" type="text" [formControl]="authorsInput">
+    <input class="pl-1 pr-1" type="text" [formControl]="authorsInput" placeholder="Author name">
     <div 
       class="alert alert-light position-absolute"
       style="max-width: 14em; z-index: 100;"
