--- a/src/app/courses/create-course/create-course.component.html
+++ b/src/app/courses/create-course/create-course.component.html
@@ -54,7 +54,7 @@
         </div>
         <div class="form-group">
           <label for="add-authors">Author(s)
-            <span class="text-danger" *ngIf="f.authors.errors">
+            <span class="text-danger" *ngIf="f.authors.touched && f.authors.errors">
               <span *ngIf="f.authors.errors.required">Required.</span>
             </span>
           </label>
